--- a/myapp/src/header/header.html
+++ b/myapp/src/header/header.html
@@ -6,7 +6,8 @@
     <button class="menu-btn" (click)="toggleMenu()">
       ☰
     </button>
-      <nav  class="nav" [class.open]="mobileOpen">
+    <nav class="nav" [class.open]="mobileOpen">
+      <a routerLink="/home" routerLinkActive="active">Home</a>
       <a routerLink="/counter" routerLinkActive="active">Counter</a>
     </nav>
   </div>
